<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/text_view_entry_title"
                android:layout_width="@dimen/journal_default_width"
                android:layout_height="@dimen/journal_default_height"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:hint="@string/journal_title_hint"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/text_view_entry_summary"
                android:layout_width="@dimen/journal_default_width"
                android:layout_height="@dimen/journal_default_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/journal_content_hint"
                android:ellipsize="end"
                android:maxLines="2"
                android:scrollHorizontally="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/text_view_entry_title"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="-1dp"
                android:hint="@string/journal_date_hint"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_view_options_menu"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_view_entry_title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="6dp"
                android:text="&#8942;"
                android:textAppearance="?android:textAppearanceLarge" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>